# hey-cli

./: .gitignore  CONTRIBUTING.md  Cargo.toml  Dockerfile  README.md  bacon.toml  docker-compose.yml
.github/workflows/: main.yml  pr-checks.yml
cli/: Cargo.toml  README.md  bacon.toml
cli/src/: main.rs
cli/src/call_server/: mod.rs
cli/src/check_ask/: mod.rs
cli/src/check_setup/: mod.rs
cli/src/generate_context/: mod.rs
cli/src/parse_args/: mod.rs
cli/src/prompt/: mod.rs
cli/src/reset/: mod.rs
cli/src/scripts/: setup_hey_cli.fish  setup_hey_cli.zsh
cli/src/setup_script/: mod.rs
cli/src/utils/: mod.rs
cli/src/what_to_do/: mod.rs
common/: Cargo.toml  README.md
common/src/: lib.rs
scripts/: bacon.rs  deploy.rs  format.rs  setup_hey.fish  setup_hey_cli.fish  update.rs
server/: Cargo.toml  Dockerfile  bacon.toml  docker-compose.yml  wrangler.toml
server/src/: home.html  lib.rs  main.rs
server/src/scripts/: install.sh
