[workspace]
resolver = "3"
members = ["cli", "common", "server"]
package.edition = "2024"

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1

[workspace.dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.42", features = [
    "rt-multi-thread",
    "macros",
], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
], default-features = false }
reqwest = { version = "0.12", features = ["json"], default-features = false }
hey-cli-common = { path = "./common", version = "0.1.1" }
anyhow = "1.0"
nest_struct = "0.5"
strum_macros = "0.26"
strum = "0.26"
