[workspace]
resolver = "3"
members = ["cli", "common", "server"]
exclude = ["scripts"]

package.edition = "2024"
package.authors = ["ZibanPirate <zakman.dev@gmail.com>"]
package.readme = "README.md"
package.license = "MIT"
package.repository = "https://github.com/ZibanPirate/hey-cli"
package.version = "0.2.4"
package.publish = false

[profile.release-cli]
inherits = "release"
strip = true
opt-level = "z"
lto = "fat"
codegen-units = 1

[profile.release-server]
inherits = "release"
opt-level = 3

[workspace.dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = [
    "rt-multi-thread",
    "macros",
], default-features = false }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
], default-features = false }
reqwest = { version = "0.12", features = [
    "json",
    "rustls-tls",
], default-features = false }
hey-cli-common = { path = "./common" }
anyhow = "1"
nest_struct = "0.5"
strum_macros = "0.27"
strum = "0.27"
dirs = "6"
clap = { version = "4", features = ["std", "derive"], default-features = false }
os_info = { version = "3", default-features = false }
regex = "1"
axum = "0.8"
dotenv = "0.15"
async-openai = "0.28"
