[package]
name = "hey-cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "hey"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.23", features = ["derive"] }
dirs = "5.0.1"
tokio = { workspace = true }
reqwest = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hey-cli-common = { path = "../common" }
