[package]
name = "hey-cli-server"
version = "0.1.1"
edition = { workspace = true }
publish = false

[package.metadata.release]
release = false

# https://github.com/rustwasm/wasm-pack/issues/1247
[package.metadata.wasm-pack.profile.release]
wasm-opt = false

[lib]
crate-type = ["cdylib"]

[dependencies]
axum = { version = "0.8", default-features = false, features = ["json"] }
worker = { version = "0.5.0", features = ['http'] }
tower-service = "0.3.2"
nest_struct = { workspace = true }
console_error_panic_hook = { version = "0.1.1" }
hey-cli-common = { workspace = true }
reqwest = { workspace = true }
serde_json = { workspace = true }
serde = { workspace = true }
wasm-bindgen = { version = "0.2", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4"
