[package]
name = "hey-cli-server"
version = "0.1.1"
edition = { workspace = true }
publish = false

[dependencies]
axum = "0.8.1"
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hey-cli-common = { workspace = true }
dotenv = "0.15"
async-openai = "0.27"
sentry = { version = "0.36", features = ["rustls"], default-features = false }
sentry-tracing = "0.36"
serde_json = { workspace = true }
