[package]
name = "hey-cli-server"
version = { workspace = true }
edition = { workspace = true }
publish = { workspace = true }

[dependencies]
axum = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
hey-cli-common = { workspace = true }
dotenv = { workspace = true }
sentry = { workspace = true }
sentry-tracing = { workspace = true }
serde_json = { workspace = true }
async-openai = { workspace = true }
